--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ nu-path = "0.105.1"
 nu-utils = "0.105.1"
 
 nickel-lang-core = "0.13.0"
+serde = { version = "1.0", features = ["derive"] }
+typetag = "0.2.18"
+uuid = { version = "1.0", features = ["v4"] }
+env_logger = "0.11"
 
 [dev-dependencies]
 nu-plugin-test-support = "0.105.1"
