--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ nu-utils = "0.105.1"
 nickel-lang-core = "0.13.0"
 serde = { version = "1.0", features = ["derive"] }
 typetag = "0.2.18"
-uuid = { version = "1.0", features = ["v4"] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
 env_logger = "0.11"
 
 [dev-dependencies]
