--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ nu-utils = "0.105.1"
 
 nickel-lang-core = "0.13.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 typetag = "0.2.18"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 env_logger = "0.11"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 nu-plugin-test-support = "0.105.1"
