--- a/examples/workspace-crate/Cargo.toml
+++ b/examples/workspace-crate/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "workspace-crate"
 # this should be:
-# version.workspace = true
-version = "0.1.0"
+version.workspace = true
+# version = "0.1.0"
 edition = "2024"
 
 [dependencies]
